--- a/client-side/package.json
+++ b/client-side/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.43.1",
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.8.1",
