--- a/client-side/package.json
+++ b/client-side/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/plots": "^1.2.5",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -18,6 +19,7 @@
     "bootstrap": "^5.2.3",
     "framer-motion": "^9.0.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-multi-carousel": "^2.8.2",
